[FIX] contact aligns

--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -29,10 +29,12 @@
 }
 @media only screen and (max-width: 600px) {
     .contact__address{
+        align-items: center;
         flex-direction: column;
     }
     .contact__address-data{
-        width: 100%;
+        width: 200px;
+        max-width: 200px;
         margin-bottom: 1rem;
     }
   }
